--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,5 @@ pypdf
 python-multipart
 streamlit
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
+gunicorn
+flask   # only if using Flask
