--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ streamlit
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
 gunicorn
 flask   # only if using Flask
+torchvision
+torchaudio
+
