--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,5 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: python backend.py
 
+    python -m spacy download en_core_web_sm
+
